# mdparser-cpp

./: CMakeLists.txt  LICENSE  README.md  test.sh
.github/workflows/: build.yml
src/: WotoMd.cpp  WotoMd.h  main.cpp
tests/: .gitignore  Makefile  methods_test.cpp  static_helpers.cpp
